Fix script.js MIME type issue

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Toastr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/public/styles.css">
 </head>
 <body>
 
@@ -35,6 +35,6 @@
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     
-    <script src="script.js"></script>
+    <script src="/public/script.js"></script>
 </body>
 </html>
