--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,6 @@
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     
-    <script src="/public/script.js"></script>
+    <script src="/public/main.js"></script>
 </body>
 </html>
